ng-contextmenu.css
.ng-contextmenu-container {
	height: auto;
	width: auto;
	background-color: #ffffff;
	border: 1px solid #aaaaaa;
	box-shadow: 2px 2px 2px #aaaaaa;
	position: absolute;
	z-index: 1000;
	display: block;
    visibility: hidden;
    overflow: hidden;}
	
	.ng-contextmenu-container.open {
		visibility: visible;
    }

    .ng-contextmenu-container > div > div {
    	margin: 2px 0px;
    	padding: 0px 8px;
    	color: inherit;}

    	.ng-contextmenu-container > div > div:hover {
    		background-color: #4281f4;
    		color: #ffffff;
    		cursor: pointer;
    	}

    	.ng-contextmenu-container > div.disabled {
    		background-color: #ffffff;
    		color: #dddddd;
    	}

    	.ng-contextmenu-container > div.disabled > div:hover {
    		background-color: #ffffff;
    		color: #dddddd;
    		cursor: default;
    }

    .ng-contextmenu-container .ng-contextmenu-divider {
    	margin: auto;
    	width: 100%;
    	height: 1px;
    	margin: 2px -8px;
    	background-color: #dddddd;
}

